--- a/src/pages/CatalogPage.module.css
+++ b/src/pages/CatalogPage.module.css
@@ -1,9 +1,6 @@
 .catalogContent {
   display: grid;
   grid-template-columns: 360px 1fr;
-  gap: 2rem;
-}
-
-.campersSection {
-  min-height: 400px;
+  gap: 64px;
+  padding: 48px 0;
 }
